--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,7 +29,7 @@ html(lang='en')
                                     // end::Svg Icon
                                 // end::Mega Menu Toggler
                                 // begin::Logo
-                                a(href="./assets/index.html")
+                                a(href="./")
                                     .fs-3x.text-dark VLSN
                                 // end::Logo
                             // end::Left
@@ -88,63 +88,8 @@ html(lang='en')
                                         // end::Row
                                     // end::Menu
                                 // end::User
-                                // begin::Notifications
-                                .ms-1.ms-lg-6
-                                    // begin::Dropdown
-                                    button.btn.btn-icon.btn-sm.btn-light-danger.fw-bolder.pulse.pulse-danger(data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end")
-                                        span.position-absolute.fs-6 3
-                                    // begin::Menu
-                                    .menu.menu-sub.menu-sub-dropdown.menu-column.menu-rounded.fw-bold.menu-title-gray-800.menu-hover-bg.menu-state-title-primary.w-250px.w-md-300px(data-kt-menu="true")
-                                        .menu-item.mx-3
-                                            .menu-content.fs-6.text-dark.fw-bolder.py-6 4 New Notifications
-                                        .separator.mb-3
-                                        .menu-item.mx-3
-                                            .symbol.symbol-35px
-                                                span.symbol-label.bg-light-info
-                                                    // begin::Svg Icon | path: icons/stockholm/Home/Library.svg
-                                                    // end::Svg Icon
-                                            .ps-4
-                                                span.menu-title.fw-bold.mb-1 New Uer Library Added
-                                                span.text-muted.fw-bold.d-block.fs-7 3 Hours ago
-                                        .menu-item.mx-3
-                                            .symbol.symbol-35px
-                                                span.symbol-label.bg-light-warning
-                                                    // begin::Svg Icon | path: icons/stockholm/Devices/Mic.svg
-                                                    // end::Svg Icon
-                                            .ps-4
-                                                span.menu-title.fw-bold.mb-1 Clean Microphone
-                                                span.text-muted.fw-bold.d-block.fs-7 5 Hours ago
-                                        .menu-item.mx-3
-                                            .symbol.symbol-35px
-                                                span.symbol-label.bg-light-primary
-                                                    // begin::Svg Icon | path: icons/stockholm/Communication/Group-chat.svg
-                                                    // end::Svg Icon
-                                            .ps-4
-                                                span.menu-title.fw-bold.mb-1 Quick Chat Created
-                                                span.text-muted.fw-bold.d-block.fs-7 A Day ago
-                                        .menu-item.mx-3
-                                            .symbol.symbol-35px
-                                                span.symbol-label.bg-light-danger
-                                                    // begin::Svg Icon | path: icons/stockholm/General/Attachment2.svg
-                                                    // end::Svg Icon
-                                            .ps-4
-                                                span.menu-title.fw-bold.mb-1 32 New Attachements
-                                                span.text-muted.fw-bold.d-block.fs-7 2 Day ago
-                                        .separator.mt-3
-                                        .menu-item.mx-2
-                                            .menu-content.py-5
-                                                a.btn.btn-primary.fw-bolder.me-2.px-5(href="#") Report
-                                                a.btn.btn-light.fw-bolder.px-5(href="#") Reset
-                                    // end::Menu
-                                    // end::Dropdown
-                                // end::Notifications
                                 // begin::Aside Toggler
                                 // end::Aside Toggler
-                                // begin::Sidebar Toggler
-                                button.btn.btn-icon.btn-sm.btn-active-bg-accent.d-lg-none.ms-1.ms-lg-6(id="kt_sidebar_toggler")
-                                    // begin::Svg Icon | path: icons/stockholm/Text/Menu.svg
-                                    // end::Svg Icon
-                                // end::Sidebar Toggler
                             // end::Right
                         // end::Container
                     block content
