--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,55 +36,55 @@ html(lang='en')
                             // begin::Right
                             .d-flex.align-items-center
                                 // begin::Search
-                                button.btn.btn-icon.btn-sm.btn-active-bg-accent.ms-1.ms-lg-6(data-bs-toggle="modal" data-bs-target="#kt_header_search_modal")
+                                a.btn.btn-icon.btn-sm.btn-active-bg-accent.ms-1.ms-lg-6(href="https://www.facebook.com/HocLyThayQuy" target="_blank")
                                     // begin::Svg Icon
                                     i.fab.fa-facebook.fs-2
                                     // end::Svg Icon
                                 // end::Search
                                 // begin::Message
-                                button.btn.btn-icon.btn-sm.btn-active-bg-accent.ms-1.ms-lg-6(data-bs-toggle="modal" data-bs-target="#kt_inbox_compose")
+                                a.btn.btn-icon.btn-sm.btn-active-bg-accent.ms-1.ms-lg-6(href="https://www.messenger.com/t/659218737551412" target="_blank")
                                     // begin::Svg
                                     i.fab.fa-facebook-messenger.fs-2
                                     // end::Svg Icon
                                 // end::Message
-                                button.btn.btn-icon.btn-sm.btn-active-bg-accent.ms-1.ms-lg-6(data-bs-toggle="modal" data-bs-target="#kt_inbox_compose")
+                                a.btn.btn-icon.btn-sm.btn-active-bg-accent.ms-1.ms-lg-6(href="https://www.vatlysieunham.com/" target="_blank")
                                     // begin::Svg
-                                    i.fad.fa-search.fs-2
+                                    i.fad.fa-globe.fs-2
                                     // end::Svg Icon
                                 // end::Message
                                 // begin::User
-                                .ms-1.ms-lg-6
-                                    // begin::Toggle
-                                    .btn.btn-icon.btn-sm.btn-active-bg-accent(data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end")
-                                        // begin::Svg
-                                        // end::Svg Icon
-                                    // begin::Menu
-                                    .menu.menu-sub.menu-sub-dropdown.menu-column.menu-rounded.menu-gray-600.menu-state-bg-light-primary.fw-bold.w-300px(data-kt-menu="true")
-                                        .menu-content.fw-bold.d-flex.align-items-center.bgi-no-repeat.bgi-position-y-top.rounded-top(style="background-image: url('./assets/media//misc/dropdown-header-bg.jpg');")
-                                            .symbol.symbol-45px.mx-5.py-5
-                                                span.symbol-label.bg-primary.align-items-end
-                                                    img.mh-35px(src="./assets/media/svg/avatars/001-boy.svg" alt="Logo")
-                                            div
-                                                span.text-white.fw-bolder.fs-4 Hello, James
-                                                span.text-white.fw-bold.fs-7.d-block CRM Product Designer
-                                        // begin::Row
-                                        .row.row-cols-2.g-0
-                                            a.border-bottom.border-end.text-center.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/profile/overview.html")
-                                                // begin::Svg Icon | path: icons/stockholm/Layout/Layout-4-blocks.svg
-                                                // end::Svg Icon
-                                                span.fw-bolder.fs-6.d-block.pt-3 My Profile
-                                            a.col.border-bottom.text-center.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/profile/account.html")
-                                                // begin::Svg Icon | path: icons/stockholm/General/Settings-1.svg
-                                                // end::Svg Icon
-                                                span.fw-bolder.fs-6.d-block.pt-3 Settings
-                                            a.col.text-center.border-end.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/profile/settings.html")
-                                                // begin::Svg Icon | path: icons/stockholm/Shopping/Euro.svg
-                                                // end::Svg Icon
-                                                span.fw-bolder.fs-6.d-block.pt-3 Subscriptions
-                                            a.col.text-center.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/general/login.html")
-                                                // begin::Svg Icon | path: icons/stockholm/Navigation/Sign-out.svg
-                                                // end::Svg Icon
-                                                span.fw-bolder.fs-6.d-block.pt-3 Sign Out
+                                //- .ms-1.ms-lg-6
+                                //-     // begin::Toggle
+                                //-     .btn.btn-icon.btn-sm.btn-active-bg-accent(data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end")
+                                //-         // begin::Svg
+                                //-         // end::Svg Icon
+                                //-     // begin::Menu
+                                //-     .menu.menu-sub.menu-sub-dropdown.menu-column.menu-rounded.menu-gray-600.menu-state-bg-light-primary.fw-bold.w-300px(data-kt-menu="true")
+                                //-         .menu-content.fw-bold.d-flex.align-items-center.bgi-no-repeat.bgi-position-y-top.rounded-top(style="background-image: url('./assets/media//misc/dropdown-header-bg.jpg');")
+                                //-             .symbol.symbol-45px.mx-5.py-5
+                                //-                 span.symbol-label.bg-primary.align-items-end
+                                //-                     img.mh-35px(src="./assets/media/svg/avatars/001-boy.svg" alt="Logo")
+                                //-             div
+                                //-                 span.text-white.fw-bolder.fs-4 Hello, James
+                                //-                 span.text-white.fw-bold.fs-7.d-block CRM Product Designer
+                                //-         // begin::Row
+                                //-         .row.row-cols-2.g-0
+                                //-             a.border-bottom.border-end.text-center.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/profile/overview.html")
+                                //-                 // begin::Svg Icon | path: icons/stockholm/Layout/Layout-4-blocks.svg
+                                //-                 // end::Svg Icon
+                                //-                 span.fw-bolder.fs-6.d-block.pt-3 My Profile
+                                //-             a.col.border-bottom.text-center.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/profile/account.html")
+                                //-                 // begin::Svg Icon | path: icons/stockholm/General/Settings-1.svg
+                                //-                 // end::Svg Icon
+                                //-                 span.fw-bolder.fs-6.d-block.pt-3 Settings
+                                //-             a.col.text-center.border-end.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/profile/settings.html")
+                                //-                 // begin::Svg Icon | path: icons/stockholm/Shopping/Euro.svg
+                                //-                 // end::Svg Icon
+                                //-                 span.fw-bolder.fs-6.d-block.pt-3 Subscriptions
+                                //-             a.col.text-center.py-10.btn.btn-active-color-primary.rounded-0(href="./assets/general/login.html")
+                                //-                 // begin::Svg Icon | path: icons/stockholm/Navigation/Sign-out.svg
+                                //-                 // end::Svg Icon
+                                //-                 span.fw-bolder.fs-6.d-block.pt-3 Sign Out
                                         // end::Row
                                     // end::Menu
                                 // end::User
